# sfc-random-accelerate

./: .gitignore  sfc-random-accelerate.cabal
bench/: Bench.hs
src/Data/Array/Accelerate/System/Random/: SFC.hs
