cabal-version:  2.0

name:           sfc-random-accelerate
version:        0.1.0.0
synopsis:       Fast, high-quality pseudo random number generation in Accelerate
description:    Please see the README on GitHub at <https://github.com/tmcdonell/sfc-random-accelerate#readme>
category:       Accelerate, Math
homepage:       https://github.com/tmcdonell/sfc-random-accelerate#readme
bug-reports:    https://github.com/tmcdonell/sfc-random-accelerate/issues
author:         Trevor L. McDonell
maintainer:     Trevor L. McDonell <trevor.mcdonell@gmail.com>
license:        BSD3
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/tmcdonell/sfc-random-accelerate

library
    default-language: Haskell2010
    hs-source-dirs:   src
  
    exposed-modules:
        Data.Array.Accelerate.System.Random.SFC
  
    build-depends:
        accelerate >=1.3
      , base >=4.7 && <5
      , mtl
      , template-haskell

benchmark bench-sfc-random-accelerate
    default-language: Haskell2010
    hs-source-dirs:   bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs

    ghc-options:
        -threaded
        -O2
        -Wall

    build-depends:
        accelerate >=1.3
        -- TODO: Put this behind a flag
      , accelerate-llvm-ptx
      , accelerate-llvm-native
      , base >=4.7 && <5
      , criterion ^>=1.5
      , mwc-random ^>=0.14.0
